# upgrade-py-direct-reqs

./: .gitignore  .pre-commit-config.yaml  README.md  agent.json  pylintrc  pyproject.toml  release-pypi-gh.sh  setup.cfg
.github/workflows/: ci.yml
src/updr/: cli.py  symbols.py
src/updr/mock_files/: pyproj_test.toml  pyproject.toml
src/upgrade-py-direct-reqs/: cli.py
tests/: test_cli.py  tests_cli.py
