[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "upgrade-py-direct-reqs"
version = "0.5.0"
description = "Upgrade only direct dependencies in requirements.txt or pyproject.toml"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICEN[CS]E*"]
authors = [
  { name = "Miteshkumar Raval", email = "mraval@nasagram.com" }
]
maintainers = [
  { name = "Miteshkumar Raval", email = "mraval@nasagram.com" }
]
keywords = ["dependencies","upgrades","upgrade packages","requirements upgrade"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta"
]
dependencies = [
  "pip>=21.0",
  "toml>=0.10.2",
  "packaging>=21.0"
]

[project.optional-dependencies]
dev = [
    "pylint",
    "pytest",
    "twine"
]

[project.urls]
Homepage = "https://github.com/mitesh-raval/upgrade-py-direct-reqs"
Repository = "https://github.com/mitesh-raval/upgrade-py-direct-reqs"
Issues = "https://github.com/mitesh-raval/upgrade-py-direct-reqs/issues"

[project.scripts]
upgrade-py-direct-reqs = "updr.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
