[metadata]
name = upgrade-py-direct-reqs
version = 0.1.0
author = Miteshkumar N Raval
author_email = mitesh@nasagram.com
description = Upgrade only direct dependencies from requirements.txt safely
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mitesh-raval/upgrade-py-direct-reqs
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Software Development :: Build Tools

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    upgrade-py-direct-reqs = upgrade_py_direct_reqs.cli:main
